syntax = "proto3";

package grpc.role.v1;

import "google/protobuf/wrappers.proto";

service RoleService {
  rpc GetAllRoles (GetAllRolesRequest) returns (GetAllRolesResponse);
}

message GetAllRolesRequest {}

message GetAllRolesResponse {
  repeated Role roles = 1;
  google.protobuf.StringValue description = 2;
}

message Role {
  int32 id = 1;
  string value = 2;
}
